yml-files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinc-k8s
  namespace: petclinic
spec:
  selector: 
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      # type: LoadBalancer
