yml-files/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: petclinic-ingress
 namespace: petclinic
 annotations:
   kubernetes.io/ingress.class: nginx
spec:
 rules:
 - host: petclinic.katamreddy.xyz 
   http:
     paths:
     - path:
       backend:
         serviceName: petclinic-k8s
         servicePort: 80
